--- a/My CV/style.css
+++ b/My CV/style.css
@@ -16,20 +16,20 @@ body {
     background-position: center;
 }
 
-    div.transbox {
+div.transbox {
     background-color: #ffffff;
     border: 3px solid black;
     opacity: 0.79;
     margin-top: 6%;
     margin-bottom: 80px;
     margin-left: 4%;
-    margin-right: 40%;
+    margin-right: 4%;
     float: left;
-    /* padding: 3%; */
+    padding: 3%;
     filter: alpha(opacity=60); /* For IE8 and earlier */
   }
 
-@media only screen and (max-width: 600px) {
+/* @media only screen and (max-width: 600px) {
     div.transbox {
     background-color: #ffffff;
     border: 3px solid black;
@@ -38,10 +38,8 @@ body {
     margin-bottom: 80px;
     margin-left: 4%;
     float: left;
-    /* padding: 3%; */
-    filter: alpha(opacity=60); /* For IE8 and earlier */
-    }
-  }
+    padding: 3%;
+ } */
 
   div.transbox h2 {
     /* margin: 5%; */
