--- a/My CV/style.css
+++ b/My CV/style.css
@@ -29,6 +29,15 @@ div.transbox {
     filter: alpha(opacity=60); /* For IE8 and earlier */
   }
 
+  div.subheader {
+    color: black;
+    text-align: center;
+    font-size: 2vmin;;
+    margin-right: 10%;
+    margin-left: 10%;
+    margin-bottom: 15px;
+}
+
 /* @media only screen and (max-width: 600px) {
     div.transbox {
     background-color: #ffffff;
@@ -44,14 +53,14 @@ div.transbox {
 /*  */
   
 div.transbox p {
-    margin: 5%;
+    margin: 3%;
     color: #000000;
     /* font-size: 2.5vmin; */
   }
 
 /* This is my tabs section*/
 section {
-    padding: 60px 0;
+    padding: 10px 2px 10px 2px;
 }
 
 section .section-title {
@@ -93,108 +102,3 @@ section .section-title {
 #tabs [role="tabpanel"]{
     font-size: 2.5vmin;
 }
-
-div.subheader {
-    color: black;
-    text-align: center;
-    font-size: 2vmin;;
-    margin-right: 10%;
-    margin-left: 10%;
-    margin-bottom: 30px;
-}
-
-
-/* .body-content {
-    padding: 20px;
-}
-.info {
-    margin-top: 25px;
-    text-align: center;
-}
-
-.info > h2 {
-    color: hsl(0, 0%, 35%);
-}
-
-.body {
-    margin-top: 25px;
-    position: relative;
-}
-
-.tabs {
-    padding: 0px;
-}
-
-.tab {
-    display: inline-block;
-    background: white;
-    padding: 10px;
-    border-radius: 5px 5px 0px 0px;
-    border-bottom: 1px solid lightgray;
-    cursor: pointer;
-    margin-right: 5px;
-}
-
-.tab:hover {
-    background: lightgray;
-}
-
-.tab.active {
-    cursor: default;
-    border-bottom: 1px solid white;
-}
-
-.tab.active:hover {
-    background: white;
-}
-
-.sidebar {
-    background: white;
-    position: fixed;
-}
-
-.sidebar > ul > li.active {
-    font-weight: 800;
-}
-
-.display {
-    background: white;
-    margin-bottom: 25px;
-    padding: 25px;
-}
-
-.body-content {
-    display: none;
-    opacity: 0;
-}
-
-.progress {
-    height: 35px;
-}
-
-.progress-label {
-    display: flex;
-    margin-left: 5px;
-    align-items: center;
-    text-align: left;
-    height: 100%;
-    font-weight: bold;
-}
-
-.portfolio {
-    display: none;
-}
-
-.repo {
-    margin-bottom: 25px;
-}
-
-.repo:after {
-    content: "";
-    display: block;
-    margin: 0 auto; 
-    margin-left: 50px;
-    width: 50%;
-    padding-top: 20px; 
-    border-bottom: 1px solid lightgrey;
-} */
