--- a/My CV/style.css
+++ b/My CV/style.css
@@ -9,7 +9,6 @@ body {
     background-attachment: fixed;
     background-size: cover;
     background-position: center;
-
   }
 
 div.transbox {
@@ -26,7 +25,7 @@ div.transbox {
     filter: alpha(opacity=60); /* For IE8 and earlier */
 }
 
-  section {
+section {
     padding: 10px 2px 10px 2px;
 }
 
@@ -62,7 +61,7 @@ section .section-title {
 div.transbox p {
     margin: 3%;
     color: #000000;
-    /* font-size: 2.5vmin; */
+    font-size: 2.5vmin;
 }
 
 div.transbox img {
@@ -94,11 +93,10 @@ div.transbox img {
 } */
 
 #tabs .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
-    /* color: black; */
-    /* background-color: transparent; */
-    /* border-color: transparent transparent black; */
-    /* background-color: rgba(255, 255, 255, 0.1); */
-    /* opacity: 80%; */
+    color: black;
+    background-color: transparent;
+    border-color: transparent transparent black;
+    opacity: 80%;
     border-bottom: 4px solid !important;
     font-size: 3vmin;
     font-weight: bold;
